# shellshuck

./: .gitignore  README.md  pyproject.toml  shellshuck.spec
packaging/: install.sh  shellshuck.desktop
src/shellshuck/: __init__.py  __main__.py  app.py  askpass.py  config.py  key_manager.py  models.py  resources.py
src/shellshuck/managers/: __init__.py  mount.py  tunnel.py
src/shellshuck/widgets/: __init__.py  key_setup_dialog.py  log_panel.py  main_window.py  mount_dialog.py  splash.py  tunnel_dialog.py
tests/: conftest.py  test_config.py  test_models.py  test_mount_manager.py  test_tunnel_manager.py
