[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shellshuck"
version = "0.1.0"
description = "PySide6 desktop app for managing SSH tunnels and SSHFS mounts"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
shellshuck = "shellshuck.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shellshuck"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["shellshuck"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
